syntax = "proto3";

//option java_multiple_files = true;
//option java_package = "io.grpc.examples.helloworld";
//option java_outer_classname = "HelloWorldProto";

// 生成go代码
//--objc_out=plugins=grpc:. user.proto

// 生成oc代码
// protoc --objc_out=. --grpc_out=. --plugin=protoc-gen-grpc=/usr/local/bin/grpc_objective_c_plugin user.proto


package user;


message LoginRequest {
  string username = 1;
  string password = 2;
}

message BaseResponse{
  int64 code = 1;
  string msg = 2;
}


message User{
    string uid = 1;
    string name = 2;
    string logo = 3;
}
message LoginResponse {
    User user = 1;
    BaseResponse baseResp = 255;
}

//service 名称，客户端会用这个去调用对应方法
service Greeter {
    //提供的RPC方法
  rpc Login (LoginRequest) returns (LoginResponse) {}
}


